# drf-timezone-test

./: .env.sample  .gitignore  Makefile  README.md  main.py  manage.py  package-lock.json  package.json  pyproject.toml  timezone-playground.md
drf_timezone_test/: asgi.py  middlewares.py  settings.py  urls.py  wsgi.py
scripts/: 00-setup-pre-talk.sh  01-create-sql-table.sql  02-get-js-date-ranges.js  02-get-py-date-ranges.py  03-insert-db-values.sql  04-django-bulk-create.py  05-POST-calls.sh  05-drf-POST-calls.sh  06-django-aggregate-by-quarter.py
timezone_test_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
timezone_test_app/migrations/: 0001_initial.py
timezone_test_app/templates/admin/: base_site.html
timezone_test_app/templates/rest_framework/: api.html
